[package]
name = "rem"
version = "0.1.0"
authors = ["ryann"]
build = "build.rs"

[dependencies]
log = "0.3"
env_logger = "0.3"
backtrace = "0.3.0"
futures = "0.1"
futures-cpupool = "0.1"
tokio-core = "0.1"
tokio-service = "0.1"
tokio-proto = "0.1"
tokio-io = "0.1"
bytes = "0.4"
native-tls = "0.1"
tokio-tls = { version = "0.1", features = ["tokio-proto"] }

